# Machine-Learning-Engineering-with-Python-Second-Edition

Chapter01/: README.md
Chapter01/forecasting/: forecasting_example.ipynb
Chapter01/mleng-with-python/: pyproject.toml
Chapter01/review/: chap1.ipynb
Chapter02/: mlewp-chapter02.yml  requirements.txt
Chapter02/mlflow/: mlflow_forecasting.py
Chapter04/k-ml-package/: pyproject.toml
